js changes to MathML are not drawn, b=337700, r+sr=bzbarsky